[workspace]
members = ["gtfo_log_reader_core"]
resolver = "2"


[workspace.package]
version = "0.1.0-beta.5"
edition = "2021"
authors = ["Tgb03<tgb03.dev@gmail.com>"]


[profile.dev]
panic = "abort"

[profile.release]
codegen-units = 1
opt-level = 3
lto = true
strip = "symbols"
overflow-checks = false
panic = "abort"
