[package]
name = "glr_lib"
version.workspace = true
edition = "2024"

[lib]
crate-type = ["lib", "dylib"]

[build-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ron = "0.10.1"
bincode = "1.3"

[features]
bin_ser = []

[dependencies]
glr_core = { path = "../glr_core" }
bincode = "1.3"
enum_dispatch = "0.3.13"
might_sleep = "0.2.0"
ron = "0.10.1"
serde_json = "1.0.140"
strum = { version = "0.26.3", features = ["derive"] }
strum_macros = "0.26.4"
winapi = "0.3.9"
serde = { version = "1.0.217", features = ["derive"] }
num_enum = "0.7.4"
regex = "1.11.3"
chrono = { version = "0.4.42", features = ["serde"] }